Centrer le main avec le CSS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Glass Website</title>
 </head>
 <body>
-    
+    <main>
+        <section class="glass">
+
+        </section>
+    </main>
+    <div class="cirlcle1"></div>
+    <div class="cirlcle2"></div>
 </body>
 </html>
