--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet" />
     <title>Glass Website</title>
 </head>
+
 <body>
     <main>
         <section class="glass">
@@ -55,7 +54,7 @@
                             <p>PS5 Version</p>
                             <div class="progress"></div>
                         </div>
-                        <h2 class="percentage" > 60% </h2>
+                        <h2 class="percentage"> 60% </h2>
                     </div>
                     <div class="card">
                         <img src="/images/spiderman.png" alt="">
@@ -64,7 +63,7 @@
                             <p>PS5 Version</p>
                             <div class="progress"></div>
                         </div>
-                        <h2 class="percentage" > 60% </h2>
+                        <h2 class="percentage"> 60% </h2>
                     </div>
                     <div class="card">
                         <img src="/images/sackboy.png" alt="">
@@ -73,7 +72,7 @@
                             <p>PS5 Version</p>
                             <div class="progress"></div>
                         </div>
-                        <h2 class="percentage" > 60% </h2>
+                        <h2 class="percentage"> 60% </h2>
                     </div>
                 </div>
             </div>
@@ -82,4 +81,5 @@
     <div class="circle1"></div>
     <div class="circle2"></div>
 </body>
+
 </html>
